config/security/publicNetworking.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-forcet-microservice
  namespace: forcet22-dev
spec:
  podSelector:
    matchLabels:
      app: forcet-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
      ports:
        - protocol: TCP
          port: 3000
